fix: fix table scrollbar & clear hightlights before find new duplicates

--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -24,6 +24,7 @@ body {
   
   #table-container {
     margin-top: 20px;
+    overflow: auto;
   
     table {
       width: 100%;
